# matching-engine

./: ADVANCED_OPTIMIZATION_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_PHASE2_SUMMARY.md  ARCHITECTURE_PHASE3_SUMMARY.md  ARCHITECTURE_PHASE4_SUMMARY.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_REFACTORING_SUMMARY.md  BENCHMARK_CONSOLIDATED_REPORT.md  BENCHMARK_DOCUMENTATION_INDEX.md  BENCHMARK_INSTRUCTIONS.md  BENCHMARK_QUICK_REFERENCE.md  BENCHMARK_REPORT.md  BENCHMARK_SUMMARY.md  BENCHMARK_TEST_RESULTS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_BENCHMARK_REPORT.md  COMPREHENSIVE_OPTIMIZATION_ANALYSIS.md  CRITICAL_PERFORMANCE_ASSESSMENT.md  Cargo.toml  DECISION_TOKIO_ONLY.md  ENVIRONMENT_TEST_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_EXECUTIVE_SUMMARY.md  FINAL_PROJECT_STATUS.txt  IO_URING_DEEP_ANALYSIS.md  MILLION_OPS_ARCHITECTURE.md  NETWORK_INTEGRATION_COMPLETE.md  NETWORK_MIDDLEWARE_DESIGN.md  NETWORK_MIDDLEWARE_SUMMARY.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS_FINAL.md  PERFORMANCE_CRITICAL_ANALYSIS.md  PERFORMANCE_FINAL_REPORT.md  PERFORMANCE_IMPROVEMENT_REPORT.md  PERFORMANCE_OPTIMIZATION_STATUS.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_TEST_REPORT.md  PHASE1_ANALYSIS.md  (+19 more)
benches/: comprehensive_benchmark.rs  e2e_matching_engine_benchmark.rs  e2e_network_benchmark.rs  high_load_benchmark.rs  multicore_benchmark.rs  network_backend_comparison.rs  network_benchmark.rs  network_middleware_benchmark.rs  orderbook_benchmark.rs  partitioned_engine_benchmark.rs  ringbuffer_comparison.rs  tick_orderbook_benchmark.rs
examples/: network_client.rs  network_server.rs
src/: engine.rs  lib.rs  main.rs  network.rs  orderbook.rs  orderbook_tick.rs  orderbook_v2.rs  partitioned_engine.rs  protocol.rs  symbol_pool.rs  timestamp.rs
src/application/: mod.rs
src/application/dto/: mod.rs
src/application/services/: matching_service.rs  mod.rs  partitioned_service.rs
src/application/use_cases/: cancel_order.rs  match_order.rs  mod.rs
src/domain/: mod.rs  validation.rs
src/domain/entities/: mod.rs
src/domain/matching/: mod.rs
src/domain/orderbook/: mod.rs  tick_based.rs  traits.rs
src/infrastructure/: mod.rs
src/infrastructure/network/: buffer.rs  codec.rs  metrics.rs  mod.rs  traits.rs
src/infrastructure/network/backends/: dpdk.rs  io_uring.rs  mod.rs  tokio.rs
src/infrastructure/observability/: health.rs  http_server.rs  mod.rs
src/infrastructure/telemetry/: mod.rs
src/interfaces/: mod.rs
src/interfaces/cli/: mod.rs
src/interfaces/tools/: mod.rs
src/legacy/: mod.rs
src/network_middleware/: buffer.rs  codec.rs  dpdk_backend.rs  io_uring_backend.rs  mod.rs  tokio_backend.rs  traits.rs
src/shared/: metrics.rs  mod.rs  protocol.rs  symbol_pool.rs  timestamp.rs
src/shared/collections/: fast_bitmap.rs  mod.rs  ringbuffer.rs
tests/: basic_trade.rs
