[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
parking_lot = "0.12"
bumpalo = { version = "3.16.0", features = ["collections"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tikv-jemallocator = "0.5"
crossbeam = "0.8"
futures = "0.3"
rand = "0.8"
num_cpus = "1.16"
smallvec = "1.13"
bit-vec = "0.6"
async-trait = "0.1"
thiserror = "1.0"

# 可选依赖
core_affinity = { version = "0.8", optional = true }
tokio-uring = { version = "0.5", optional = true }
libc = "0.2"
socket2 = "0.5"

[features]
# CPU亲和性特性（需要平台支持）
cpu-affinity = ["core_affinity"]

# io_uring高性能网络
io-uring = ["tokio-uring"]

# DPDK网络加速（需要DPDK库）
dpdk = []

# FPGA硬件加速（需要FPGA驱动）
fpga = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "orderbook_benchmark"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false

[[bench]]
name = "network_benchmark"
harness = false

[[bench]]
name = "e2e_network_benchmark"
harness = false


[[bench]]
name = "partitioned_engine_benchmark"
harness = false

[[bench]]
name = "high_load_benchmark"
harness = false

[[bench]]
name = "ringbuffer_comparison"
harness = false

[[bench]]
name = "tick_orderbook_benchmark"
harness = false

[[bench]]
name = "network_middleware_benchmark"
harness = false

[[bench]]
name = "network_backend_comparison"
harness = false

[[bench]]
name = "e2e_matching_engine_benchmark"
harness = false
